@@ -1,14 +1,0 @@
-<!DOCTYPE html>
-<html lang="eng">
-<meta charset="UTF-8">
-<head>
-    <title>Marque sua consulta</title>
-</head>
-<body>
-    <p><a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a></p>
-    <p>Usuário: * Tipo: *</p>
-    <p><h1>Marque sua consulta</h1></p>
-    <P>Essa pagina só pode ser acessada por pacientes</P>
-    <p>Aqui o usuario deve poder marcar consultas</p>
-</body>
-</html>
